# realtime_multiLidar_system

./: README.md
MultiLidar_Cali/RSlidarCali/: CMakeLists.txt  更新日志
MultiLidar_Cali/RSlidarCali/RSDecoder/: input.cpp  rslidar_decoder.hpp  rslidar_packet.h
MultiLidar_Cali/RSlidarCali/RSDecoder/ConfigrationFiles/: ChannelNumDistance.csv
MultiLidar_Cali/RSlidarCali/XSenseDrive/: CMakeLists.txt
MultiLidar_Cali/RSlidarCali/XSenseDrive/lib/xspublic/xscontroller/: mti6x0device.dpp  nmea_protocolhandler.dpp  restorecommunication.dpp  xscontrol_def.dpp  xsdevice_def.dpp
MultiLidar_Cali/RSlidarCali/XSenseDrive/src/: main.cpp
MultiLidar_Cali/RSlidarCali/src/: Auxiliary.cpp  Auxiliary.h  Auxiliary_IMU.cpp  Auxiliary_IMU.h  GetFrame_RS.cpp  GetFrame_RS.h  MutLidarCali.cpp  PointCloudManage.cpp  PointCloudManage.h  cali.cpp  cali.h  imu_get_data.cpp  imu_get_data.h  parameter.txt  test.cpp
RSlidarTest11.5/: CMakeLists.txt  更新日志
RSlidarTest11.5/RSDecoder/ConfigrationFiles/: curves.csv
RSlidarTest11.5/cyn_Param/: parameter.txt
RSlidarTest11.5/src/: Auxiliary.cpp  Auxiliary.h  GetFrame_RS.cpp  LidarMap_t.h  MutiLidar.cpp  MutiLidar.h  PointCloudManage.cpp  PointCloudManage.h  grid.h  grid_manage.cpp  grid_manage.h  main.cpp  备份__parameter.txt
RSlidarTest11.5_share/: CMakeLists.txt
RSlidarTest11.5_share/RSDecoder/: input.h  readme.md  rslidar_decoder.hpp
RSlidarTest11.5_share/cyn_Param/: parameter.txt
RSlidarTest11.5_share/cyn_include/: GetFrame_RS.h  MutiLidar.h  grid_manage.h
RSlidarTest11.5_share/src/: main.cpp
Record11.13/: CMakeLists.txt  更新日志
Record11.13/RSDecoder/: input.cpp  rslidar_decoder.hpp
Record11.13/RSDecoder/ConfigrationFiles/: angle.csv
Record11.13/Record/modi_ImuRecord/: CMakeLists.txt  main.cpp
Record11.13/XSenseDrive/lib/xspublic/xscontroller/: broadcastdevice.dpp  datapacketcache.dpp  mtdevice.dpp  mtibasedevice.dpp  mtix00device.dpp  mtix0device.dpp  mtixdevice.dpp  packetstamper.dpp
Record11.13/XSenseDrive/lib/xspublic/xstypes/: datapacket_p.dpp  xsdatapacket.dpp  xsdatapacketptrarray.d  xsglovedata.d  xsoutputconfiguration.h
Record11.13/src/: 0_Record.cpp  Auxiliary.cpp  Auxiliary.h  Auxiliary_IMU.cpp  Auxiliary_IMU.h  GetFrame_RS.cpp  GetFrame_RS.h  PointCloudManage.cpp  PointCloudManage.h  imu_get_data.cpp  imu_get_data.h  parameter.txt  备份_parameter.txt
Record11.13/src/gridTest/: CMakeLists.txt  headTeat.cpp
Record11.13/src/gridTest/saved/: grid.txt
